feat: added infrastructure APIs
